--- a/lab/srl-salt-agent.clab.yml
+++ b/lab/srl-salt-agent.clab.yml
@@ -17,26 +17,16 @@ topology:
       image: jbemmel/docker-salt-master-proxy:latest
       mgmt_ipv4: 172.20.20.10
       env:
-       SALT_LOG_LEVEL: debug
+       SALT_LOG_LEVEL: info
       binds:
       # - "../logs/salt-master:/home/salt/data/logs/"
-      - "salt-proxy.conf:/etc/supervisor/conf.d/salt-proxy.conf"
       - "etc_salt_proxy:/etc/salt/proxy"
       - "salt-master-config:/home/salt/data/config/"
       - "pillar_top.sls:/home/salt/data/srv/pillar/top.sls"
       - "nornir_proxy.sls:/home/salt/data/srv/pillar/nornir_proxy.sls"
-      # - "srl1.sls:/home/salt/data/srv/pillar/srl1.sls"
-      # - "srl2.sls:/home/salt/data/srv/pillar/srl2.sls"
-
       # - "salt-master-data:/home/salt/data"
 
     # see https://salt-nornir.readthedocs.io/en/latest/Getting%20started.html#configure-proxy-minion
-    # salt-proxy:
-    #  kind: linux
-    #  image: ghcr.io/cdalvaro/docker-salt-master:latest
-    #  binds:
-    #  - "etc_salt_proxy:/etc/salt/proxy"
-    #  cmd: "salt-proxy --proxyid=nornir-proxy -l debug"
 
     srl1:
       startup-config: allow-salt-tcp.cmd
