--- a/lab/srl-salt-agent.clab.yml
+++ b/lab/srl-salt-agent.clab.yml
@@ -21,7 +21,8 @@ topology:
       binds:
       # - "../logs/salt-master:/home/salt/data/logs/"
       - "etc_salt_proxy:/etc/salt/proxy"
-      - "salt_data:/home/salt/data/"
+      - "salt_data_config:/home/salt/data/config/"
+      - "salt_data_srv:/home/salt/data/srv/"
       # - "clab-srl-salt-agent/ca/root/root-ca.pem:/home/salt/data/keys/root-ca.pem"
       # - "salt-master-data:/home/salt/data"
 
