Working inotify/reactor sequence for making backup of config after any change

--- a/srl-salt-minion.yml
+++ b/srl-salt-minion.yml
@@ -1,5 +1,5 @@
 srl_salt_minion:
-  path: /opt/srl-salt-minion/.venv/bin/
+  path: /opt/srl-salt-minion/
   launch-command: /opt/srl-salt-minion/scripts/run.sh
   search-command: python3 /opt/srl-salt-minion/main.py
   # launch-in-net-namespace: true
