--- a/lab/srl-salt-agent.clab.yml
+++ b/lab/srl-salt-agent.clab.yml
@@ -23,7 +23,7 @@ topology:
       - "etc_salt_proxy:/etc/salt/proxy"
       - "salt_data_config:/home/salt/data/config/"
       - "salt_data_srv:/home/salt/data/srv/"
-      - "/Projects/srlinux-22.6.1-281.bin:/home/salt/srlinux-22.6.1-281.bin"
+      # - "/Projects/srlinux-22.6.1-281.bin:/home/salt/data/srv/salt/srlinux-22.6.1-281.bin"
       # - "clab-srl-salt-agent/ca/root/root-ca.pem:/home/salt/data/keys/root-ca.pem"
       # - "salt-master-data:/home/salt/data"
 
@@ -32,7 +32,8 @@ topology:
     srl1:
       startup-config: allow-salt-tcp.cmd
       mgmt_ipv4: 172.20.20.21
-      # binds:
+      binds:
+      - "salt_data_srv/salt/srlinux/srlinux-22.6.1-281.bin:/tmp/srlinux-22.6.1-281.bin"
       #   - "../srl-salty-minion-agent:/opt/srl-salty-minion-agent" # mount dir with agent code
       #   - "../logs/srl1:/var/log/srlinux" # expose srlinux logs to a dev machine
       #   - "../srl-salty-minion-agent.yml:/etc/opt/srlinux/appmgr/srl-salty-minion-agent.yml" # put agent config file to appmgr directory
