--- a/lab/srl-salt-agent.clab.yml
+++ b/lab/srl-salt-agent.clab.yml
@@ -23,6 +23,8 @@ topology:
       - "etc_salt_proxy:/etc/salt/proxy"
       - "salt_data_config:/home/salt/data/config/"
       - "salt_data_srv:/home/salt/data/srv/"
+      - "clab-srl-salt-agent/ca/srl1/srl1.pem:/home/salt/srl1.pem"
+      - "clab-srl-salt-agent/ca/srl2/srl2.pem:/home/salt/srl2.pem"
 
       # - "/Projects/srlinux-22.6.1-281.bin:/home/salt/data/srv/salt/srlinux-22.6.1-281.bin"
       # - "clab-srl-salt-agent/ca/root/root-ca.pem:/home/salt/data/keys/root-ca.pem"
@@ -35,7 +37,7 @@ topology:
       mgmt_ipv4: 172.20.20.21
       binds:
       - "salt_data_srv/salt/srlinux/srlinux-22.6.1-281.bin:/tmp/srlinux-22.6.1-281.bin"
-      - "reqs.txt:/tmp/reqs.txt"
+      # - "clab-srl-salt-agent/ca/srl1/srl1.pem:/home/salt/data/keys/srl1.pem"
       #   - "../srl-salty-minion-agent:/opt/srl-salty-minion-agent" # mount dir with agent code
       #   - "../logs/srl1:/var/log/srlinux" # expose srlinux logs to a dev machine
       #   - "../srl-salty-minion-agent.yml:/etc/opt/srlinux/appmgr/srl-salty-minion-agent.yml" # put agent config file to appmgr directory
